# LogScope

./: .env.example  .gitignore  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json  ruff.toml
app/: main.py
app/alembic/: env.py  helpers.py
app/alembic/versions/: 0001_init_users.py  0002_seed_admin_user.py  0003_init_library.py  0004_drop_product_category.py  0005_parse_rule_archived_status.py  0006_add_docs_table.py  0007_add_llm_generation_jobs_table.py  0008_extend_log_types_for_llm.py  0009_extend_parse_rules_for_llm.py  0010_add_llm_lineage_fk_constraints.py  0011_vendor_name_unique.py
app/api/v1/: __init__.py
app/common/: auth.py  exceptions.py  schemas.py
app/common/utils/: slug.py
app/core/: cache.py  clickhouse.py  clickhouse_schema.py  config.py  database.py  deps.py  exception_handlers.py  lifespan.py  logging.py  middleware.py
app/modules/analyzer/: schemas.py
app/modules/auth/: schemas.py
app/modules/copilot/: constants.py  schemas.py
app/modules/llm_pipeline/: exceptions.py  schemas.py
docs/: LogScope_Design_Document_v1.2.html
docs/superpowers/plans/: 2026-05-08-1a-foundation-and-auth.md  2026-05-08-1b-library-backend.md  (+9 more)
engine/v25/: Cargo.toml  pyproject.toml
engine/v32/: Cargo.toml  pyproject.toml
engine/v32/src/: lib.rs  value.rs
fixtures/keycloak/: logs.txt  meta.json  parser.vrl
fixtures/simple-json/: logs.txt  meta.json  parser.vrl
fixtures/simple-syslog/: logs.txt  meta.json  parser.vrl
tests/: conftest.py
tests/integration/: conftest.py
tests/unit/: test_health.py
web/: biome.json  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  vitest.config.ts
web/app/: globals.css  layout.tsx
web/components/: login-form.tsx
web/lib/: use-media-query.ts
web/test/: utils.tsx
(+197 files in other folders)
